<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BusquedaDePlatosActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical">

        <include layout="@layout/toolbar_back"></include>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvPlatoNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPlatoNombreBuscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plato_nombre"
                android:inputType="none|textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvPlatoPrecioMin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPlatoPrecioMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/precio_plato_min"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvPlatoPrecioMax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPlatoPrecioMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/precio_plato_max"
                android:inputType="number|numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancelarBusqueda"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel_busqueda"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnBuscar"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBuscar"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_buscar_plato"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnCancelarBusqueda" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_guardar"
                app:layout_constraintEnd_toStartOf="@+id/btnBuscar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerPlatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>